# DiscordMusicBot

./: .gitignore  DiscordMusicBotRelease.fig  Pipfile  README.md  bot.py  config.py  config.toml.example  constants.py  main.py  project_typing.py  pyproject.toml  utils.py
applications/lavalink/: application.yml
cogs/events/: checks.py  error_handler.py
database/: __init__.py  abc_repository.py  database.py  database_manager.py  model.py  models.py  orm.py  repository.py
dockers/: LavalinkDockerfile  MainDockerfile
extensions/: help_extension.py  misc_extension.py  music_extension.py
extensions/commands/: help_extension.py  misc_extension.py  music.py  music_extension.py  test_extension.py
initializer/: __init__.py  database.py
models/: abc_repository.py  bot.py  repository.py
music_bot/: __main__.py  project_typing.py
music_bot/database/: repository.py
music_bot/extensions/: __init__.py  help_extension.py  misc_extension.py  music_extension.py
src/allocation/: __init__.py
src/allocation/adapters/: orm.py
src/allocation/repositories/: __init__.py
src/modules/: __init__.py
src/modules/lavasnek_player/: __init__.py  player.py
src/music_bot/: __main__.py  general_errors.py  project_typing.py
src/music_bot/allocation/: __init__.py
src/music_bot/database/: __init__.py  abc_repository.py  orm.py
src/music_bot/injectors/: __init__.py
tests/: .gitignore  test_database.py  test_repository_model.py  test_utils.py
tools/discord/: .gitignore
utils/: __init__.py  discord.py  general.py  tools.py
utils/discord/: __init__.py  default_embed.py
(+52 files in other folders)
