[tool.poetry]
name = "music_bot"
version = "0.1.1"
description = "Discord music bot"
authors = ["LEv145"]
license = "GPLv2"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
hikari-musicbot-banner = {git = "https://github.com/LEv145/Hikari-music-bot-banner.git", rev = "main"}
music-source = {git = "https://github.com/LEv145/music_source"}
SQLAlchemy = {extras = ["mypy", "asyncio"], version = "^1.4.31"}
pydantic = "^1.9.0"
toml = "^0.10.2"
hikari = {extras = ["speedups"], version = "^2.0.0-alpha.106"}
sqlalchemy2-stubs = "^0.0.2-alpha.20"
uvloop = "^0.16.0"
colorlog = "^6.6.0"
lavasnek-rs = "^0.1.0-alpha.4"
mypy-extensions = "^0.4.3"
typing-extensions = "^4.1.1"
types-toml = "^0.10.4"
click = "^8.0.3"
"lyricstranslate.py" = {git = "https://github.com/LEv145/lyricstranslate.py"}
hikari-lightbulb = "^2.2.0"
plugin-manager = {git = "https://github.com/LEv145/lightbulb_plugin_manager.git", rev = "dev"}

[tool.poetry.dev-dependencies]
tox = "*"
mypy = "*"
pylint = "*"
mkinit = "*"
black = "^21.12b0"
aiosqlite = "*"
poethepoet = "*"

[tool.poetry.scripts]
music_bot = "music_bot.__main__:main"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.mypy]
ignore_missing_imports = true
strict_optional = true
implicit_reexport = true
warn_unused_ignores = false

[tool.poe.tasks]
mkinit = "mkinit --black --nomods --relative -w"
